app/styles/dropdowns/_basic-dropdown.scss
/* ... */
.dropdown.open .dropdown .dropdown__toggle {
    color: $grayDark;
}

.dropdown__more-actions .dropdown__toggle > i {
    opacity: 0.3;
}
.dropdown__more-actions .dropdown__toggle:hover > i,
.dropdown__more-actions.open .dropdown__toggle > i {
    opacity: 1;
}


// Dropdown arrow/caret
// --------------------

.dropdown__caret {
    display: inline-block;
    width: 0;
    height: 0;
    vertical-align: middle;
    margin-block-start: -2px;
    margin-inline-start: 6px;
    border-left:  4px solid transparent;
    border-right: 4px solid transparent;
    border-top:   4px solid $sd-text;
    opacity: .3;
    content: "";
    transition: all 0.1s ease-in;
    &.dropdown__caret--white, 
    &.white {
        border-top-color: $white;
    }
}

.dropdown:hover .dropdown__caret,
.dropdown.open .dropdown__caret {
    opacity: 1;
}

.dropdown.open .dropdown__caret {
    border-top-color: $sd-colour-interactive;
}

// The dropdown menu
// ----------------------
.dropdown__menu {
    position: absolute;
    top: 100%;
    inset-inline-start: 0;
    z-index: $zindexDropdown;
    display: none; // none by default, but block on "open" of the menu
    min-width: 200px;
    padding: 1rem 0;
    margin: 0; // override default ul
    list-style: none;
    background-color: $dropdownBackground;
    box-shadow: $shadow__dropdown--default;
    border-radius: $dropdownMenuBorderRadius;
    text-align: start;

    .dropdown {
        width: 100%;
    }

    // Links within the dropdown menu
    li, .dropdown__menu-item {
        a:not(.btn), button:not(.btn):not(.dropdown__menu-close):not(.toggle-button) {
            display: block;
            font-weight: normal;
            line-height: $baseLineHeight;
            white-space: nowrap;
            width: 100%;
            min-width: 200px;
            position: relative;
            color: $dropdownLinkColor;
            background-color: $sd-colour-background__menu-item;
            padding: .6rem 1.6rem;
            margin-block-end: .2rem;
            font-size: 1.3rem;
            text-decoration: none;
            text-align: start;
            transition: $sd-transition__menu-item;
            > i[class^="icon-"], i[class*=" icon-"], i[class^="filetype-icon-"] {
                margin-inline-end: 1rem;
                margin-block-start: -0.3rem;
                min-width: 1.9rem;
                vertical-align: middle;
                color: var(--color-text-light);
            }
            > i[class^="icon-"] {
                margin-inline-end: 1rem;
                margin-block-start: -0.3rem;
                min-width: 1.9rem;
                vertical-align: middle;
                color: var(--color-icon-default);
            }
            &.disabled, &[disabled] {
                opacity: .5;
            }
        }
        a:not(.btn), button:not(.btn):not(.dropdown__menu-close):not(.toggle-button) {
            &:hover {
                background-color: $sd-colour-background__menu-item--hover;
                text-decoration: none;
                cursor: pointer;
            }
            &:focus {
                background-color: $sd-colour-background__menu-item;
                box-shadow: var(--sd-shadow__menu-item--focus-inner);
                text-decoration: none;
                outline: none;
            }
            &:active {
                background-color: $sd-colour-background__menu-item--active;
            }
            &.disabled:hover, &[disabled]:hover {
                background-color: none;
                cursor: default;
            }
        }
        .preferred-desk {
            background-color: var(--sd-colour-interactive--lighten-30) !important;
        }
    }
    &.dropdown__menu--plain {
        li, .dropdown__menu-item {
            padding: .5rem .7rem;
            &:hover {
                background: $dropdownLinkBackgroundHover;
                cursor: pointer;
            }
        }
    }
    &--has-head-foot {
        padding: 0;
        .dropdown__menu-label {
            margin: 0.4rem 0;
        }
        .dropdown__menu-header {
            flex: 0 0;
            padding: 0.6rem 0;
            margin: 0;
            .dropdown__menu-label {
                margin: 0.6rem 0 0.4rem;
            }
        }
        .dropdown__menu-body {
            overflow-y: auto;
            flex: 0 1;
            padding: 0.6rem 0;
            max-height: 320px;
        }
        .dropdown__menu-body:first-child {
            .dropdown__menu-label {
                margin: 0.6rem 0 0.4rem;
            }
        }
        .dropdown__menu-footer {
            flex: 0 0;
            padding: 0.6rem 0;
            margin: 0;
            
        }
        &.open {
            display: flex;
        }
    }
    .dropdown-filter, .dropdown__filter {
        height: $sd-base-increment * 4;
        border: 1px solid var(--sd-colour-line--light);
        border-radius: var(--b-radius--small);
        padding-right: 5px;
        padding-left: 5px;
        transition: all 0.2s ease;
        color: var(--color-text);
        background-color: var(--sd-colour-bg__searchbar);
        &:hover {
            border: 1px solid var(--sd-colour-line--strong);
        }
        &:focus {
            border: 1px solid var(--sd-colour-interactive--alpha-70);
            box-shadow: inset 0 0 0 3px var(--sd-colour-interactive--alpha-20);
        }
        &[disabled] {
            border-color: var(--sd-colour-line--x-light);
            background-color: var(--sd-colour-bg__searchbar);
        }
    }

}

// Dividers (basically an hr) within the dropdown
.dropdown__menu-divider {
    height: 1px;
    margin: 0.8rem 0;
    overflow: hidden;
    background-color: var(--color-border-line--light);
}
/* ... */

